--- a/treino_classificador_esg.ipynb
+++ b/treino_classificador_esg.ipynb
@@ -14,8 +14,7 @@
    "metadata": {},
    "source": [
     "- Autor: Daniel Saraiva Leite - 2023\n",
-    "- Projeto Análise de sentimentos sobre notícias do tema ESG\n",
-    "- Trabalho de conclusão de curso - MBA Digital Business USP Esalq"
+    "- Projeto Análise de sentimentos sobre notícias do tema ESG"
    ]
   },
   {
