--- a/processa_analise_sentimento.ipynb
+++ b/processa_analise_sentimento.ipynb
@@ -19,26 +19,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "b9c5d7b9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package rslp to\n",
-      "[nltk_data]     /Users/danielsaraivaleite/nltk_data...\n",
-      "[nltk_data]   Package rslp is already up-to-date!\n",
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     /Users/danielsaraivaleite/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /Users/danielsaraivaleite/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import warnings\n",
     "import re\n",
@@ -74,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "2d3e9497",
    "metadata": {},
    "outputs": [],
@@ -108,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "5c32b37f",
    "metadata": {},
    "outputs": [],
@@ -140,15 +124,7 @@
    "execution_count": null,
    "id": "195249eb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Realizadas 0 chamadas à API do GPT.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_excel(base_noticias)\n",
     "\n",
@@ -167,7 +143,7 @@
     "    df_cache = pd.DataFrame({'hash': dic_cache.keys(),  'resposta': dic_cache.values()})\n",
     "    df_cache.to_excel(caminho_cache, index=False)\n",
     "\n",
-    "# faz os filtros\n",
+    "# faz os filtros de classificacao e sem texto\n",
     "df.to_excel(base_noticias, index=False)\n",
     "df = df[~pd.isnull(df['texto_completo'])]\n",
     "df = df[df['classificacao_ml'] != 'Outros']  \n",
@@ -180,8 +156,11 @@
     "df['gpt_resumo'] = df.apply(lambda row: row['titulo'] if pd.isnull(row['gpt_resumo']) else row['gpt_resumo'] , axis=1)\n",
     "\n",
     "df['gpt_lista_respostas'] = df['gpt_lista_respostas'].astype(str)  # para permitir remover duplicatas\n",
+    "\n",
+    "# filtro lexico nas novas noticias\n",
     "df = filtrar_noticias_pos_coleta_modelo_simplificado(df, df_empresas)\n",
     "\n",
+    "# salva a base de saida\n",
     "df.to_excel(base_noticias_saida, index=False)\n",
     "\n",
     "# versao reduzida para o site\n",
@@ -190,6 +169,22 @@
     "\n",
     "print('Processamento concluído')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64104135",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1246991",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
