--- a/processa_captura_noticias.ipynb
+++ b/processa_captura_noticias.ipynb
@@ -19,26 +19,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "d5cac40d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package rslp to\n",
-      "[nltk_data]     /Users/danielsaraivaleite/nltk_data...\n",
-      "[nltk_data]   Package rslp is already up-to-date!\n",
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     /Users/danielsaraivaleite/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /Users/danielsaraivaleite/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import warnings\n",
     "import pandas as pd\n",
@@ -55,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "f1f1ebec",
    "metadata": {
     "scrolled": false
@@ -66,11 +50,32 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "2024-02-25 20:34:59.559239 Buscando empresa petrobras\n",
-      "...... buscando no google petrobras\n",
-      "2024-02-25 20:35:02.220023 ... noticias encontradas: 13\n",
-      "2024-02-25 20:35:02.224338 ... noticias novas: 2\n",
-      "2024-02-25 20:35:06.531890 ... textos buscados: 0\n",
+      "2024-02-25 21:56:45.378783 Buscando empresa bahema\n",
+      "...... buscando no google bahema\n",
+      "2024-02-25 21:57:25.077632 ... noticias encontradas: 1\n",
+      "2024-02-25 21:57:25.086397 ... noticias novas: 1\n",
+      "2024-02-25 21:57:27.417002 ... textos buscados: 1\n",
+      "2024-02-25 21:57:27.563984 ... novas noticias após filtros: 1\n",
+      "\n",
+      "2024-02-25 21:57:41.536372 Buscando empresa gafisa\n",
+      "...... buscando no google gafisa\n",
+      "2024-02-25 21:57:44.597361 ... noticias encontradas: 1\n",
+      "2024-02-25 21:57:44.605979 ... noticias novas: 1\n",
+      "2024-02-25 21:57:45.738078 ... textos buscados: 0\n",
+      "\n",
+      "2024-02-25 21:57:45.738683 Buscando empresa itau unibanco\n",
+      "...... buscando no google itau+unibanco\n",
+      "2024-02-25 21:57:48.242661 ... noticias encontradas: 15\n",
+      "2024-02-25 21:57:48.250585 ... noticias novas: 14\n",
+      "2024-02-25 21:58:15.832538 ... textos buscados: 14\n",
+      "2024-02-25 21:58:17.256383 ... novas noticias após filtros: 14\n",
+      "\n",
+      "2024-02-25 21:58:31.231932 Buscando empresa magazine luiza\n",
+      "...... buscando no google magazine+luiza\n",
+      "2024-02-25 21:58:34.448862 ... noticias encontradas: 53\n",
+      "2024-02-25 21:58:34.454604 ... noticias novas: 53\n",
+      "2024-02-25 22:00:42.367696 ... textos buscados: 53\n",
+      "2024-02-25 22:00:47.118566 ... novas noticias após filtros: 53\n",
       "\n",
       "Captura concluída\n"
      ]
