--- a/processa_analise_sentimento.ipynb
+++ b/processa_analise_sentimento.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "b9c5d7b9",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "2d3e9497",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "5c32b37f",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,10 @@
    "source": [
     "df = pd.read_excel(base_noticias)\n",
     "\n",
-    "# abre o cache\n",
+    "# seleciona apenas as que ja passaram por filtro iniciais ou sao novas\n",
+    "df = df[  (  (pd.isnull(df['noticia_selecionada']))  |  (df['noticia_selecionada'] ==1)  )  ]\n",
+    "\n",
+    "# abre o cache do chat gpt\n",
     "df_cache = pd.read_excel(caminho_cache)\n",
     "dic_cache = df_cache.set_index('hash')['resposta'].to_dict()\n",
     "tam_inicial = len(dic_cache)\n",
@@ -157,8 +160,16 @@
     "\n",
     "df['gpt_lista_respostas'] = df['gpt_lista_respostas'].astype(str)  # para permitir remover duplicatas\n",
     "\n",
-    "# filtro lexico nas novas noticias\n",
-    "df = filtrar_noticias_pos_coleta_modelo_simplificado(df, df_empresas)\n",
+    "# filtro lexico apenas novas noticias\n",
+    "df_filtrado = filtrar_noticias_pos_coleta_modelo_simplificado(df[pd.isnull(df['noticia_selecionada'])], df_empresas)\n",
+    "# salva o resultado do filtro por eficiencia (salva na base sem sentimentos por eficiencia)\n",
+    "df_original = pd.read_excel(base_noticias)\n",
+    "df_original['noticia_selecionada'] =  ( (df_original['noticia_selecionada']==1) |  df_original['hash'].isin(  df_filtrado['hash'].values  ) ).apply(lambda x: 1 if x else 0)\n",
+    "df_original.to_excel(base_noticias, index=False)\n",
+    "\n",
+    "# aplica o filtro na base ja com sentimentos\n",
+    "df['noticia_selecionada'] =  ( (df['noticia_selecionada']==1) |  df['hash'].isin(  df_filtrado['hash'].values  ) ).apply(lambda x: 1 if x else 0)\n",
+    "df = df[df['noticia_selecionada']==1] \n",
     "\n",
     "# salva a base de saida\n",
     "df.to_excel(base_noticias_saida, index=False)\n",
@@ -169,22 +180,6 @@
     "\n",
     "print('Processamento concluído')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64104135",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a1246991",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
