--- a/processa_captura_noticias.ipynb
+++ b/processa_captura_noticias.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "d5cac40d",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "f1f1ebec",
    "metadata": {
     "scrolled": false
@@ -50,32 +50,40 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "2024-02-25 21:56:45.378783 Buscando empresa bahema\n",
-      "...... buscando no google bahema\n",
-      "2024-02-25 21:57:25.077632 ... noticias encontradas: 1\n",
-      "2024-02-25 21:57:25.086397 ... noticias novas: 1\n",
-      "2024-02-25 21:57:27.417002 ... textos buscados: 1\n",
-      "2024-02-25 21:57:27.563984 ... novas noticias após filtros: 1\n",
+      "2024-02-25 23:07:37.241365 Buscando empresa alpargatas\n",
+      "...... buscando no google alpargatas\n",
+      "2024-02-25 23:07:39.966592 ... noticias encontradas: 11\n",
+      "2024-02-25 23:07:39.970989 ... noticias novas: 11\n",
+      "2024-02-25 23:08:02.605119 ... textos buscados: 11\n",
+      "2024-02-25 23:08:03.658685 ... novas noticias após filtros: 11\n",
       "\n",
-      "2024-02-25 21:57:41.536372 Buscando empresa gafisa\n",
-      "...... buscando no google gafisa\n",
-      "2024-02-25 21:57:44.597361 ... noticias encontradas: 1\n",
-      "2024-02-25 21:57:44.605979 ... noticias novas: 1\n",
-      "2024-02-25 21:57:45.738078 ... textos buscados: 0\n",
+      "2024-02-25 23:08:08.446458 Buscando empresa cvc\n",
+      "...... buscando no google cvc\n",
+      "2024-02-25 23:08:11.394852 ... noticias encontradas: 23\n",
+      "2024-02-25 23:08:11.398481 ... noticias novas: 23\n",
+      "2024-02-25 23:08:49.630302 ... textos buscados: 20\n",
+      "2024-02-25 23:08:51.446870 ... novas noticias após filtros: 20\n",
       "\n",
-      "2024-02-25 21:57:45.738683 Buscando empresa itau unibanco\n",
-      "...... buscando no google itau+unibanco\n",
-      "2024-02-25 21:57:48.242661 ... noticias encontradas: 15\n",
-      "2024-02-25 21:57:48.250585 ... noticias novas: 14\n",
-      "2024-02-25 21:58:15.832538 ... textos buscados: 14\n",
-      "2024-02-25 21:58:17.256383 ... novas noticias após filtros: 14\n",
+      "2024-02-25 23:08:56.177594 Buscando empresa grupo pao de acucar\n",
+      "...... buscando no google grupo+pao+de+acucar\n",
+      "2024-02-25 23:08:59.230251 ... noticias encontradas: 57\n",
+      "2024-02-25 23:08:59.233804 ... noticias novas: 57\n",
+      "2024-02-25 23:11:03.032220 ... textos buscados: 57\n",
+      "2024-02-25 23:11:08.367286 ... novas noticias após filtros: 57\n",
       "\n",
-      "2024-02-25 21:58:31.231932 Buscando empresa magazine luiza\n",
-      "...... buscando no google magazine+luiza\n",
-      "2024-02-25 21:58:34.448862 ... noticias encontradas: 53\n",
-      "2024-02-25 21:58:34.454604 ... noticias novas: 53\n",
-      "2024-02-25 22:00:42.367696 ... textos buscados: 53\n",
-      "2024-02-25 22:00:47.118566 ... novas noticias após filtros: 53\n",
+      "2024-02-25 23:11:13.119338 Buscando empresa minerva\n",
+      "...... buscando no google minerva\n",
+      "2024-02-25 23:11:15.723803 ... noticias encontradas: 16\n",
+      "2024-02-25 23:11:15.728147 ... noticias novas: 16\n",
+      "2024-02-25 23:11:55.645391 ... textos buscados: 15\n",
+      "2024-02-25 23:11:57.057720 ... novas noticias após filtros: 15\n",
+      "\n",
+      "2024-02-25 23:12:01.742110 Buscando empresa petz\n",
+      "...... buscando no google petz\n",
+      "2024-02-25 23:12:48.208201 ... noticias encontradas: 65\n",
+      "2024-02-25 23:12:48.211088 ... noticias novas: 65\n",
+      "2024-02-25 23:15:23.459278 ... textos buscados: 63\n",
+      "2024-02-25 23:15:29.766993 ... novas noticias após filtros: 63\n",
       "\n",
       "Captura concluída\n"
      ]
