--- a/processa_analise_sentimento.ipynb
+++ b/processa_analise_sentimento.ipynb
@@ -121,10 +121,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "195249eb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Realizadas 510 chamadas à API do GPT.\n",
+      "Processamento concluído\n"
+     ]
+    }
+   ],
    "source": [
     "df = pd.read_excel(base_noticias)\n",
     "\n",
