--- a/processa_analise_sentimento.ipynb
+++ b/processa_analise_sentimento.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "b9c5d7b9",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "2d3e9497",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "5c32b37f",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "195249eb",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Realizadas 510 chamadas à API do GPT.\n",
+      "Realizadas 0 chamadas à API do GPT.\n",
       "Processamento concluído\n"
      ]
     }
@@ -137,8 +137,6 @@
    "source": [
     "df = pd.read_excel(base_noticias)\n",
     "\n",
-    "# seleciona apenas as que ja passaram por filtro iniciais ou sao novas\n",
-    "df = df[  (  (pd.isnull(df['noticia_selecionada']))  |  (df['noticia_selecionada'] ==1)  )  ]\n",
     "\n",
     "# abre o cache do chat gpt\n",
     "df_cache = pd.read_excel(caminho_cache)\n",
@@ -147,7 +145,11 @@
     "\n",
     "\n",
     "try:\n",
-    "    df['gpt_resposta_completa'] = df.apply(lambda row: classifica_sentimento_noticia_gpt(row['data_publicacao'], row['titulo'], row['texto_completo'], row['empresa'], dicionario_cache=dic_cache)  if (  (not pd.isnull(row['texto_completo'])) and row['classificacao_ml'] != 'Outros' and ( pd.isnull(row['gpt_resposta_completa'])) ) else row['gpt_resposta_completa'], axis=1)\n",
+    "    df['gpt_resposta_completa'] = df.apply(lambda row: classifica_sentimento_noticia_gpt(row['data_publicacao'], row['titulo'], row['texto_completo'], row['empresa'], dicionario_cache=dic_cache)  \n",
+    "                                                 if (  (not pd.isnull(row['texto_completo'])) and row['classificacao_ml'] != 'Outros' \n",
+    "                                                         and ( pd.isnull(row['gpt_resposta_completa']))  \n",
+    "                                                         and (  pd.isnull(row['noticia_selecionada']) or row['noticia_selecionada']==1   ) ) \n",
+    "                                                         else row['gpt_resposta_completa'], axis=1)\n",
     "finally:                                                                    \n",
     "    #salva o cache do gpt\n",
     "    tam_final = len(dic_cache)\n",
@@ -155,8 +157,12 @@
     "    df_cache = pd.DataFrame({'hash': dic_cache.keys(),  'resposta': dic_cache.values()})\n",
     "    df_cache.to_excel(caminho_cache, index=False)\n",
     "\n",
-    "# faz os filtros de classificacao e sem texto\n",
+    "# salva processamento na  base original\n",
     "df.to_excel(base_noticias, index=False)\n",
+    "\n",
+    "\n",
+    "# faz os filtros\n",
+    "df = df[  (  (pd.isnull(df['noticia_selecionada']))  |  (df['noticia_selecionada'] ==1)  )  ]\n",
     "df = df[~pd.isnull(df['texto_completo'])]\n",
     "df = df[df['classificacao_ml'] != 'Outros']  \n",
     "\n",
@@ -169,9 +175,11 @@
     "\n",
     "df['gpt_lista_respostas'] = df['gpt_lista_respostas'].astype(str)  # para permitir remover duplicatas\n",
     "\n",
-    "# filtro lexico apenas novas noticias\n",
+    "# filtro lexico aplicados apenas as  novas noticias\n",
     "df_filtrado = filtrar_noticias_pos_coleta_modelo_simplificado(df[pd.isnull(df['noticia_selecionada'])], df_empresas)\n",
+    "\n",
     "# salva o resultado do filtro por eficiencia (salva na base sem sentimentos por eficiencia)\n",
+    "# esse trecho permite que a rotina so seja aplicada a novas noticias futuramente, deixando proc. mais eficiente\n",
     "df_original = pd.read_excel(base_noticias)\n",
     "df_original['noticia_selecionada'] =  ( (df_original['noticia_selecionada']==1) |  df_original['hash'].isin(  df_filtrado['hash'].values  ) ).apply(lambda x: 1 if x else 0)\n",
     "df_original.to_excel(base_noticias, index=False)\n",
@@ -179,6 +187,10 @@
     "# aplica o filtro na base ja com sentimentos\n",
     "df['noticia_selecionada'] =  ( (df['noticia_selecionada']==1) |  df['hash'].isin(  df_filtrado['hash'].values  ) ).apply(lambda x: 1 if x else 0)\n",
     "df = df[df['noticia_selecionada']==1] \n",
+    "\n",
+    "# retira duplicatas\n",
+    "df = df.drop_duplicates(['hash'], keep='first')\n",
+    "df = df.sort_values(by=['Nome', 'data_publicacao'])\n",
     "\n",
     "# salva a base de saida\n",
     "df.to_excel(base_noticias_saida, index=False)\n",
