--- a/processa_analise_sentimento.ipynb
+++ b/processa_analise_sentimento.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "b9c5d7b9",
    "metadata": {},
    "outputs": [],
@@ -28,24 +28,15 @@
     "import re\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib as mp\n",
-    "import seaborn as sns\n",
     "import datetime  as dt\n",
-    "from noticias_timeline import plota_timeline\n",
     "from noticias_processamento_texto import *\n",
-    "from noticias_graficos import *\n",
     "from analise_sentimento_modelo_gpt import *\n",
     "from classificador_esg import aplica_classificador_esg\n",
     "import pickle\n",
     "from cotacoes import *\n",
+    "from noticias_io import *\n",
     "\n",
-    "warnings.filterwarnings('ignore')\n",
-    "lista_empresas = 'datasets/lista_empresas.xlsx'\n",
-    "base_noticias = 'datasets/base_noticias.xlsx'\n",
-    "base_noticias_saida = 'datasets/sentimento_base_noticias.xlsx'\n",
-    "base_noticias_saida_short = 'datasets/sentimento_base_noticias_short.xlsx'\n",
-    "caminho_cache='datasets/gpt_cache.xlsx'"
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -58,12 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "2d3e9497",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel(base_noticias)\n",
+    "df = le_base_noticias_bruta_para_df()\n",
     "\n",
     "df['fonte'] = df['fonte'].apply(trata_nome_fontes)\n",
     "df['data_publicacao'] = df['data_publicacao'].dt.date\n",
@@ -79,7 +70,7 @@
     "df['hash'] = df.apply(lambda row: criar_hash_noticia(row['texto_completo'], row['empresa'], titulo=row['titulo'], data=row['data_publicacao']), axis=1)\n",
     "\n",
     "# le lista empresas\n",
-    "df_empresas = pd.read_excel(lista_empresas)"
+    "df_empresas = le_lista_empresas_para_df()"
    ]
   },
   {
@@ -92,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "5c32b37f",
    "metadata": {},
    "outputs": [],
@@ -108,7 +99,7 @@
     "                                                                                                              col_texto_saida='texto_ajustado', col_classe_verdadeira='classificacao')       \n",
     "    \n",
     "# salva na base original para cache\n",
-    "df.to_excel(base_noticias, index=False)"
+    "salva_base_noticias_bruta(df)"
    ]
   },
   {
@@ -121,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "195249eb",
    "metadata": {},
    "outputs": [
@@ -135,11 +126,11 @@
     }
    ],
    "source": [
-    "df = pd.read_excel(base_noticias)\n",
+    "df = le_base_noticias_bruta_para_df()\n",
     "\n",
     "\n",
     "# abre o cache do chat gpt\n",
-    "df_cache = pd.read_excel(caminho_cache)\n",
+    "df_cache = le_cache_gpt_para_df()\n",
     "dic_cache = df_cache.set_index('hash')['resposta'].to_dict()\n",
     "tam_inicial = len(dic_cache)\n",
     "\n",
@@ -155,10 +146,10 @@
     "    tam_final = len(dic_cache)\n",
     "    print('Realizadas ' + str(tam_final - tam_inicial) + ' chamadas à API do GPT.')\n",
     "    df_cache = pd.DataFrame({'hash': dic_cache.keys(),  'resposta': dic_cache.values()})\n",
-    "    df_cache.to_excel(caminho_cache, index=False)\n",
+    "    salva_cache_gpt(df_cache)\n",
     "\n",
     "# salva processamento na  base original\n",
-    "df.to_excel(base_noticias, index=False)\n",
+    "salva_base_noticias_bruta(df)\n",
     "\n",
     "\n",
     "# faz os filtros\n",
@@ -180,9 +171,11 @@
     "\n",
     "# salva o resultado do filtro por eficiencia (salva na base sem sentimentos por eficiencia)\n",
     "# esse trecho permite que a rotina so seja aplicada a novas noticias futuramente, deixando proc. mais eficiente\n",
-    "df_original = pd.read_excel(base_noticias)\n",
+    "df_original = le_base_noticias_bruta_para_df()\n",
     "df_original['noticia_selecionada'] =  ( (df_original['noticia_selecionada']==1) |  df_original['hash'].isin(  df_filtrado['hash'].values  ) ).apply(lambda x: 1 if x else 0)\n",
-    "df_original.to_excel(base_noticias, index=False)\n",
+    "salva_base_noticias_bruta(df_original)\n",
+    "###\n",
+    "\n",
     "\n",
     "# aplica o filtro na base ja com sentimentos\n",
     "df['noticia_selecionada'] =  ( (df['noticia_selecionada']==1) |  df['hash'].isin(  df_filtrado['hash'].values  ) ).apply(lambda x: 1 if x else 0)\n",
@@ -193,14 +186,30 @@
     "df = df.sort_values(by=['Nome', 'data_publicacao'])\n",
     "\n",
     "# salva a base de saida\n",
-    "df.to_excel(base_noticias_saida, index=False)\n",
+    "salva_base_noticias_processada(df)\n",
     "\n",
     "# versao reduzida para o site\n",
     "df_short = df.loc[: , ['hash', 'titulo', 'data_publicacao', 'url', 'fonte', 'empresa', 'Nome',  'CNPJ', 'Razão social', 'Setor', 'Código',  'classificacao', 'gpt_resumo', 'polaridade']]\n",
-    "df_short.to_excel(base_noticias_saida_short, index=False)\n",
+    "salva_base_noticias_compacta(df)\n",
     "\n",
     "print('Processamento concluído')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6326228e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9942077",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
