--- a/processa_estudos.ipynb
+++ b/processa_estudos.ipynb
@@ -53,15 +53,9 @@
     "from noticias_graficos import *\n",
     "from analise_sentimento_modelo_gpt import *\n",
     "from classificador_esg import aplica_classificador_esg\n",
-    "import pickle\n",
-    "from cotacoes import *\n",
+    "from noticias_io import *\n",
     "\n",
-    "warnings.filterwarnings('ignore')\n",
-    "lista_empresas = 'datasets/lista_empresas.xlsx'\n",
-    "base_noticias = 'datasets/base_noticias.xlsx'\n",
-    "base_noticias_saida = 'datasets/sentimento_base_noticias.xlsx'\n",
-    "base_noticias_saida_short = 'datasets/sentimento_base_noticias_short.xlsx'\n",
-    "caminho_cache='datasets/gpt_cache.xlsx'"
+    "warnings.filterwarnings('ignore')\n"
    ]
   },
   {
@@ -90,7 +84,7 @@
     }
    ],
    "source": [
-    "df = pd.read_excel(base_noticias_saida)\n",
+    "df = le_base_noticias_processada_para_df()\n",
     "\n",
     "    \n",
     "plotar_descricao_base(df, plotar_histograma=False, arquivo=r'static/images/descricao_base.png')"
@@ -285,7 +279,7 @@
     "\n",
     "dfB3 = None\n",
     "\n",
-    "dfEmpresasComparar = pd.read_excel('datasets/lista_empresas.xlsx')\n",
+    "dfEmpresasComparar = le_lista_empresas_para_df()\n",
     "dfEmpresasComparar = pd.merge(left=dfEmpresasComparar, right=pd.read_excel('datasets/EscoreB3.xlsx'), on='RAZÃO SOCIAL', how='left')\n",
     "\n",
     "\n",
