--- a/processa_analise_sentimento.ipynb
+++ b/processa_analise_sentimento.ipynb
@@ -19,10 +19,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "b9c5d7b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/danielsaraivaleite/opt/anaconda3/lib/python3.9/site-packages/pandas/core/computation/expressions.py:21: UserWarning: Pandas requires version '2.8.4' or newer of 'numexpr' (version '2.8.3' currently installed).\n",
+      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n",
+      "/Users/danielsaraivaleite/opt/anaconda3/lib/python3.9/site-packages/pandas/core/arrays/masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
+      "  from pandas.core import (\n",
+      "/Users/danielsaraivaleite/opt/anaconda3/lib/python3.9/site-packages/scipy/__init__.py:155: UserWarning: A NumPy version >=1.18.5 and <1.25.0 is required for this version of SciPy (detected version 1.26.4\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n",
+      "[nltk_data] Downloading package rslp to\n",
+      "[nltk_data]     /Users/danielsaraivaleite/nltk_data...\n",
+      "[nltk_data]   Package rslp is already up-to-date!\n",
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     /Users/danielsaraivaleite/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /Users/danielsaraivaleite/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "import warnings\n",
     "import re\n",
@@ -49,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "2d3e9497",
    "metadata": {},
    "outputs": [],
@@ -83,10 +105,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "5c32b37f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['E' 'G' 'Outros' 'S']\n",
+      "[0.25568405 0.10168746 0.42157758 0.22105091]\n",
+      "[1 3 0 2]\n",
+      "0\n",
+      "['E' 'G' 'Outros' 'S']\n",
+      "[0.10179023 0.42312524 0.45906843 0.0160161 ]\n",
+      "[3 0 1 2]\n",
+      "1\n",
+      "['E' 'G' 'Outros' 'S']\n",
+      "[0.27576004 0.3082335  0.3498256  0.06618086]\n",
+      "[3 0 1 2]\n",
+      "1\n",
+      "['E' 'G' 'Outros' 'S']\n",
+      "[0.38943484 0.0933052  0.4946246  0.02263536]\n",
+      "[3 1 0 2]\n",
+      "0\n",
+      "['E' 'G' 'Outros' 'S']\n",
+      "[0.04449474 0.35379118 0.49750696 0.10420711]\n",
+      "[0 3 1 2]\n",
+      "1\n",
+      "['E' 'G' 'Outros' 'S']\n",
+      "[0.21027229 0.11005053 0.42311063 0.25656655]\n",
+      "[1 0 3 2]\n",
+      "3\n",
+      "['E' 'G' 'Outros' 'S']\n",
+      "[0.19922374 0.09217691 0.40054184 0.30805751]\n",
+      "[1 0 3 2]\n",
+      "3\n",
+      "['E' 'G' 'Outros' 'S']\n",
+      "[0.14134733 0.34618481 0.4923382  0.02012966]\n",
+      "[3 0 1 2]\n",
+      "1\n",
+      "['E' 'G' 'Outros' 'S']\n",
+      "[0.02024243 0.15432352 0.49330245 0.3321316 ]\n",
+      "[0 1 3 2]\n",
+      "3\n",
+      "['E' 'G' 'Outros' 'S']\n",
+      "[0.30350382 0.09872146 0.3209707  0.27680402]\n",
+      "[1 3 0 2]\n",
+      "0\n",
+      "['E' 'G' 'Outros' 'S']\n",
+      "[0.07448054 0.12188732 0.42537065 0.37826149]\n",
+      "[0 1 3 2]\n",
+      "3\n",
+      "['E' 'G' 'Outros' 'S']\n",
+      "[0.14165166 0.29791607 0.43003751 0.13039476]\n",
+      "[3 0 1 2]\n",
+      "1\n",
+      "['E' 'G' 'Outros' 'S']\n",
+      "[0.37056861 0.14010435 0.45499024 0.0343368 ]\n",
+      "[3 1 0 2]\n",
+      "0\n",
+      "['E' 'G' 'Outros' 'S']\n",
+      "[0.01174174 0.30078367 0.4968345  0.19064009]\n",
+      "[0 3 1 2]\n",
+      "1\n",
+      "['E' 'G' 'Outros' 'S']\n",
+      "[0.12741026 0.24609531 0.43687963 0.1896148 ]\n",
+      "[0 3 1 2]\n",
+      "1\n",
+      "['E' 'G' 'Outros' 'S']\n",
+      "[0.18080879 0.19933917 0.36837965 0.25147239]\n",
+      "[0 1 3 2]\n",
+      "3\n",
+      "['E' 'G' 'Outros' 'S']\n",
+      "[0.04449474 0.35379118 0.49750696 0.10420711]\n",
+      "[0 3 1 2]\n",
+      "1\n",
+      "['E' 'G' 'Outros' 'S']\n",
+      "[0.04449474 0.35379118 0.49750696 0.10420711]\n",
+      "[0 3 1 2]\n",
+      "1\n",
+      "['E' 'G' 'Outros' 'S']\n",
+      "[0.0924342  0.44169265 0.44225789 0.02361526]\n",
+      "[3 0 1 2]\n",
+      "1\n",
+      "['E' 'G' 'Outros' 'S']\n",
+      "[0.05457284 0.04578073 0.49058391 0.40906251]\n",
+      "[1 0 3 2]\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# utiliza o classificador por ML para determinar o assunto da noticia: E, S, G ou outros\n",
     "vect = pickle.load(open('models/svm_vetorizador.sav', 'rb'))\n",
@@ -112,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "195249eb",
    "metadata": {},
    "outputs": [
@@ -120,7 +229,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Realizadas 0 chamadas à API do GPT.\n",
+      "Realizadas 388 chamadas à API do GPT.\n",
       "Processamento concluído\n"
      ]
     }
@@ -206,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9942077",
+   "id": "01fd6697",
    "metadata": {},
    "outputs": [],
    "source": []
