--- a/processa_captura_noticias.ipynb
+++ b/processa_captura_noticias.ipynb
@@ -19,32 +19,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "d5cac40d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/danielsaraivaleite/opt/anaconda3/lib/python3.9/site-packages/pandas/core/computation/expressions.py:21: UserWarning: Pandas requires version '2.8.4' or newer of 'numexpr' (version '2.8.3' currently installed).\n",
-      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n",
-      "/Users/danielsaraivaleite/opt/anaconda3/lib/python3.9/site-packages/pandas/core/arrays/masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
-      "  from pandas.core import (\n",
-      "/Users/danielsaraivaleite/opt/anaconda3/lib/python3.9/site-packages/scipy/__init__.py:155: UserWarning: A NumPy version >=1.18.5 and <1.25.0 is required for this version of SciPy (detected version 1.26.4\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n",
-      "[nltk_data] Downloading package rslp to\n",
-      "[nltk_data]     /Users/danielsaraivaleite/nltk_data...\n",
-      "[nltk_data]   Package rslp is already up-to-date!\n",
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     /Users/danielsaraivaleite/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /Users/danielsaraivaleite/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import warnings\n",
     "import pandas as pd\n",
@@ -59,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "f1f1ebec",
    "metadata": {
     "scrolled": false
@@ -70,82 +48,68 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "2024-03-03 22:06:18.398006 Buscando empresa slc agricola\n",
-      "...... buscando no google slc+agricola\n",
-      "2024-03-03 22:06:57.576284 ... noticias encontradas: 37\n",
-      "2024-03-03 22:06:57.589154 ... noticias novas: 22\n",
-      "2024-03-03 22:07:40.296447 ... textos buscados: 18\n",
-      "2024-03-03 22:07:42.931477 ... novas noticias após filtros: 18\n",
+      "2024-03-05 21:34:44.405605 Buscando empresa camargo correa\n",
+      "...... buscando no google camargo+correa\n",
+      "2024-03-05 21:35:26.084775 ... noticias encontradas: 13\n",
+      "2024-03-05 21:35:26.093047 ... noticias novas: 13\n",
+      "2024-03-05 21:35:53.799880 ... textos buscados: 13\n",
+      "2024-03-05 21:35:55.955110 ... novas noticias após filtros: 13\n",
       "\n",
-      "2024-03-03 22:07:44.264360 Buscando empresa taurus\n",
-      "...... buscando no google taurus\n",
-      "2024-03-03 22:08:23.801470 ... noticias encontradas: 44\n",
-      "2024-03-03 22:08:23.808762 ... noticias novas: 44\n",
-      "2024-03-03 22:09:32.609276 ... textos buscados: 44\n",
-      "2024-03-03 22:09:38.407759 ... novas noticias após filtros: 44\n",
+      "2024-03-05 21:35:58.266362 Buscando empresa cemig\n",
+      "...... buscando no google cemig\n",
+      "2024-03-05 21:36:01.516714 ... noticias encontradas: 29\n",
+      "2024-03-05 21:36:01.524646 ... noticias novas: 28\n",
+      "2024-03-05 21:37:09.127174 ... textos buscados: 25\n",
+      "2024-03-05 21:37:12.313484 ... novas noticias após filtros: 25\n",
       "\n",
-      "2024-03-03 22:09:39.717227 Buscando empresa terra santa propriedades agricolas\n",
-      "...... buscando no google terra+santa+propriedades+agricolas\n",
-      "2024-03-03 22:10:20.019581 ... noticias encontradas: 12\n",
-      "2024-03-03 22:10:20.028467 ... noticias novas: 11\n",
-      "2024-03-03 22:10:39.251429 ... textos buscados: 11\n",
-      "2024-03-03 22:10:40.693140 ... novas noticias após filtros: 11\n",
+      "2024-03-05 21:37:13.897398 Buscando empresa credz\n",
+      "...... buscando no google credz\n",
+      "2024-03-05 21:37:55.255489 ... noticias encontradas: 5\n",
+      "2024-03-05 21:37:55.266139 ... noticias novas: 5\n",
+      "2024-03-05 21:38:10.166687 ... textos buscados: 5\n",
+      "2024-03-05 21:38:10.832615 ... novas noticias após filtros: 5\n",
       "\n",
-      "2024-03-03 22:10:41.996955 Buscando empresa ultrapar\n",
-      "...... buscando no google ultrapar\n",
-      "2024-03-03 22:11:23.202561 ... noticias encontradas: 45\n",
-      "2024-03-03 22:11:23.210914 ... noticias novas: 45\n",
-      "2024-03-03 22:13:55.012189 ... textos buscados: 37\n",
-      "2024-03-03 22:14:00.396968 ... novas noticias após filtros: 37\n",
+      "2024-03-05 21:38:12.374578 Buscando empresa eletrobras\n",
+      "...... buscando no google eletrobras\n",
+      "2024-03-05 21:38:15.846213 ... noticias encontradas: 70\n",
+      "2024-03-05 21:38:15.853972 ... noticias novas: 69\n",
+      "2024-03-05 21:41:36.987262 ... textos buscados: 63\n",
+      "2024-03-05 21:41:45.074827 ... novas noticias após filtros: 63\n",
       "\n",
-      "2024-03-03 22:14:01.793114 Buscando empresa unilever\n",
-      "...... buscando no google unilever\n",
-      "2024-03-03 22:14:47.710703 ... noticias encontradas: 163\n",
-      "2024-03-03 22:14:47.717099 ... noticias novas: 86\n",
-      "2024-03-03 22:18:19.626391 ... textos buscados: 52\n",
-      "2024-03-03 22:18:26.924297 ... novas noticias após filtros: 52\n",
+      "2024-03-05 21:41:46.654370 Buscando empresa havan\n",
+      "...... buscando no google havan\n",
+      "2024-03-05 21:42:26.490709 ... noticias encontradas: 19\n",
+      "2024-03-05 21:42:26.500033 ... noticias novas: 19\n",
+      "2024-03-05 21:43:07.136034 ... textos buscados: 19\n",
+      "2024-03-05 21:43:09.355090 ... novas noticias após filtros: 19\n",
       "\n",
-      "2024-03-03 22:18:28.255509 Buscando empresa usiminas\n",
-      "...... buscando no google usiminas\n",
-      "2024-03-03 22:19:11.414612 ... noticias encontradas: 179\n",
-      "2024-03-03 22:19:11.420169 ... noticias novas: 158\n",
-      "2024-03-03 22:27:37.353740 ... textos buscados: 136\n",
-      "2024-03-03 22:27:55.597384 ... novas noticias após filtros: 136\n",
+      "2024-03-05 21:43:10.791618 Buscando empresa jbs\n",
+      "...... buscando no google jbs\n",
+      "2024-03-05 21:43:14.623953 ... noticias encontradas: 52\n",
+      "2024-03-05 21:43:14.631511 ... noticias novas: 52\n",
+      "2024-03-05 21:44:43.110477 ... textos buscados: 50\n",
+      "2024-03-05 21:44:49.187139 ... novas noticias após filtros: 50\n",
       "\n",
-      "2024-03-03 22:27:57.211659 Buscando empresa vale\n",
-      "...... buscando no google vale\n",
-      "2024-03-03 22:28:44.147874 ... noticias encontradas: 224\n",
-      "2024-03-03 22:28:44.156762 ... noticias novas: 148\n",
-      "2024-03-03 22:34:54.398889 ... textos buscados: 140\n",
-      "2024-03-03 22:35:15.366407 ... novas noticias após filtros: 140\n",
+      "2024-03-05 21:44:50.631035 Buscando empresa oi\n",
+      "...... buscando no google oi\n",
+      "2024-03-05 21:45:29.007655 ... noticias encontradas: 108\n",
+      "2024-03-05 21:45:29.017109 ... noticias novas: 108\n",
+      "2024-03-05 21:49:28.501226 ... textos buscados: 107\n",
+      "2024-03-05 21:49:41.908255 ... novas noticias após filtros: 107\n",
       "\n",
-      "2024-03-03 22:35:16.888616 Buscando empresa via\n",
-      "...... buscando no google via\n",
-      "2024-03-03 22:36:04.048229 ... noticias encontradas: 115\n",
-      "2024-03-03 22:36:04.057335 ... noticias novas: 100\n",
-      "2024-03-03 22:40:10.168621 ... textos buscados: 89\n",
-      "2024-03-03 22:40:23.038177 ... novas noticias após filtros: 89\n",
+      "2024-03-05 21:49:43.586361 Buscando empresa unigel\n",
+      "...... buscando no google unigel\n",
+      "2024-03-05 21:50:21.553526 ... noticias encontradas: 16\n",
+      "2024-03-05 21:50:21.559563 ... noticias novas: 16\n",
+      "2024-03-05 21:51:12.474807 ... textos buscados: 15\n",
+      "2024-03-05 21:51:14.296389 ... novas noticias após filtros: 15\n",
       "\n",
-      "2024-03-03 22:40:24.533983 Buscando empresa vibra energia\n",
-      "...... buscando no google vibra+energia\n",
-      "2024-03-03 22:40:59.274531 ... noticias encontradas: 94\n",
-      "2024-03-03 22:40:59.284016 ... noticias novas: 81\n",
-      "2024-03-03 22:44:00.145234 ... textos buscados: 68\n",
-      "2024-03-03 22:44:08.635860 ... novas noticias após filtros: 68\n",
-      "\n",
-      "2024-03-03 22:44:10.050763 Buscando empresa vivo\n",
-      "...... buscando no google vivo\n",
-      "2024-03-03 22:44:47.545255 ... noticias encontradas: 314\n",
-      "2024-03-03 22:44:47.550516 ... noticias novas: 231\n",
-      "2024-03-03 22:51:44.102932 ... textos buscados: 227\n",
-      "2024-03-03 22:52:13.893868 ... novas noticias após filtros: 227\n",
-      "\n",
-      "2024-03-03 22:52:15.492652 Buscando empresa weg\n",
-      "...... buscando no google weg\n",
-      "2024-03-03 22:52:58.153491 ... noticias encontradas: 47\n",
-      "2024-03-03 22:52:58.164187 ... noticias novas: 27\n",
-      "2024-03-03 22:54:02.604709 ... textos buscados: 20\n",
-      "2024-03-03 22:54:05.138512 ... novas noticias após filtros: 20\n",
+      "2024-03-05 21:51:15.815186 Buscando empresa valid\n",
+      "...... buscando no google valid\n",
+      "2024-03-05 21:51:56.609525 ... noticias encontradas: 189\n",
+      "2024-03-05 21:51:56.617720 ... noticias novas: 189\n",
+      "2024-03-05 22:00:43.165356 ... textos buscados: 147\n",
+      "2024-03-05 22:01:06.703495 ... novas noticias após filtros: 147\n",
       "\n",
       "Captura concluída\n"
      ]
