--- a/processa_captura_noticias.ipynb
+++ b/processa_captura_noticias.ipynb
@@ -19,10 +19,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "d5cac40d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/danielsaraivaleite/opt/anaconda3/lib/python3.9/site-packages/pandas/core/computation/expressions.py:21: UserWarning: Pandas requires version '2.8.4' or newer of 'numexpr' (version '2.8.3' currently installed).\n",
+      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n",
+      "/Users/danielsaraivaleite/opt/anaconda3/lib/python3.9/site-packages/pandas/core/arrays/masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
+      "  from pandas.core import (\n",
+      "/Users/danielsaraivaleite/opt/anaconda3/lib/python3.9/site-packages/scipy/__init__.py:155: UserWarning: A NumPy version >=1.18.5 and <1.25.0 is required for this version of SciPy (detected version 1.26.4\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n",
+      "[nltk_data] Downloading package rslp to\n",
+      "[nltk_data]     /Users/danielsaraivaleite/nltk_data...\n",
+      "[nltk_data]   Package rslp is already up-to-date!\n",
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     /Users/danielsaraivaleite/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /Users/danielsaraivaleite/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "import warnings\n",
     "import pandas as pd\n",
@@ -37,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "f1f1ebec",
    "metadata": {
     "scrolled": false
@@ -48,68 +70,26 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "2024-03-05 21:34:44.405605 Buscando empresa camargo correa\n",
-      "...... buscando no google camargo+correa\n",
-      "2024-03-05 21:35:26.084775 ... noticias encontradas: 13\n",
-      "2024-03-05 21:35:26.093047 ... noticias novas: 13\n",
-      "2024-03-05 21:35:53.799880 ... textos buscados: 13\n",
-      "2024-03-05 21:35:55.955110 ... novas noticias após filtros: 13\n",
+      "2024-03-06 13:44:31.053078 Buscando empresa amazonas energia\n",
+      "...... buscando no google amazonas+energia\n",
+      "2024-03-06 13:45:09.284784 ... noticias encontradas: 90\n",
+      "2024-03-06 13:45:09.297826 ... noticias novas: 90\n",
+      "2024-03-06 13:48:11.993176 ... textos buscados: 79\n",
+      "2024-03-06 13:48:23.070738 ... novas noticias após filtros: 79\n",
       "\n",
-      "2024-03-05 21:35:58.266362 Buscando empresa cemig\n",
-      "...... buscando no google cemig\n",
-      "2024-03-05 21:36:01.516714 ... noticias encontradas: 29\n",
-      "2024-03-05 21:36:01.524646 ... noticias novas: 28\n",
-      "2024-03-05 21:37:09.127174 ... textos buscados: 25\n",
-      "2024-03-05 21:37:12.313484 ... novas noticias após filtros: 25\n",
+      "2024-03-06 13:48:24.770636 Buscando empresa edp brasil\n",
+      "...... buscando no google edp+brasil\n",
+      "2024-03-06 13:49:00.925544 ... noticias encontradas: 131\n",
+      "2024-03-06 13:49:00.934042 ... noticias novas: 97\n",
+      "2024-03-06 13:53:02.439960 ... textos buscados: 90\n",
+      "2024-03-06 13:53:13.623849 ... novas noticias após filtros: 90\n",
       "\n",
-      "2024-03-05 21:37:13.897398 Buscando empresa credz\n",
-      "...... buscando no google credz\n",
-      "2024-03-05 21:37:55.255489 ... noticias encontradas: 5\n",
-      "2024-03-05 21:37:55.266139 ... noticias novas: 5\n",
-      "2024-03-05 21:38:10.166687 ... textos buscados: 5\n",
-      "2024-03-05 21:38:10.832615 ... novas noticias após filtros: 5\n",
-      "\n",
-      "2024-03-05 21:38:12.374578 Buscando empresa eletrobras\n",
-      "...... buscando no google eletrobras\n",
-      "2024-03-05 21:38:15.846213 ... noticias encontradas: 70\n",
-      "2024-03-05 21:38:15.853972 ... noticias novas: 69\n",
-      "2024-03-05 21:41:36.987262 ... textos buscados: 63\n",
-      "2024-03-05 21:41:45.074827 ... novas noticias após filtros: 63\n",
-      "\n",
-      "2024-03-05 21:41:46.654370 Buscando empresa havan\n",
-      "...... buscando no google havan\n",
-      "2024-03-05 21:42:26.490709 ... noticias encontradas: 19\n",
-      "2024-03-05 21:42:26.500033 ... noticias novas: 19\n",
-      "2024-03-05 21:43:07.136034 ... textos buscados: 19\n",
-      "2024-03-05 21:43:09.355090 ... novas noticias após filtros: 19\n",
-      "\n",
-      "2024-03-05 21:43:10.791618 Buscando empresa jbs\n",
-      "...... buscando no google jbs\n",
-      "2024-03-05 21:43:14.623953 ... noticias encontradas: 52\n",
-      "2024-03-05 21:43:14.631511 ... noticias novas: 52\n",
-      "2024-03-05 21:44:43.110477 ... textos buscados: 50\n",
-      "2024-03-05 21:44:49.187139 ... novas noticias após filtros: 50\n",
-      "\n",
-      "2024-03-05 21:44:50.631035 Buscando empresa oi\n",
-      "...... buscando no google oi\n",
-      "2024-03-05 21:45:29.007655 ... noticias encontradas: 108\n",
-      "2024-03-05 21:45:29.017109 ... noticias novas: 108\n",
-      "2024-03-05 21:49:28.501226 ... textos buscados: 107\n",
-      "2024-03-05 21:49:41.908255 ... novas noticias após filtros: 107\n",
-      "\n",
-      "2024-03-05 21:49:43.586361 Buscando empresa unigel\n",
-      "...... buscando no google unigel\n",
-      "2024-03-05 21:50:21.553526 ... noticias encontradas: 16\n",
-      "2024-03-05 21:50:21.559563 ... noticias novas: 16\n",
-      "2024-03-05 21:51:12.474807 ... textos buscados: 15\n",
-      "2024-03-05 21:51:14.296389 ... novas noticias após filtros: 15\n",
-      "\n",
-      "2024-03-05 21:51:15.815186 Buscando empresa valid\n",
-      "...... buscando no google valid\n",
-      "2024-03-05 21:51:56.609525 ... noticias encontradas: 189\n",
-      "2024-03-05 21:51:56.617720 ... noticias novas: 189\n",
-      "2024-03-05 22:00:43.165356 ... textos buscados: 147\n",
-      "2024-03-05 22:01:06.703495 ... novas noticias após filtros: 147\n",
+      "2024-03-06 13:53:15.287446 Buscando empresa hapvida\n",
+      "...... buscando no google hapvida\n",
+      "2024-03-06 13:53:51.358566 ... noticias encontradas: 32\n",
+      "2024-03-06 13:53:51.370496 ... noticias novas: 7\n",
+      "2024-03-06 13:54:01.723072 ... textos buscados: 5\n",
+      "2024-03-06 13:54:02.299154 ... novas noticias após filtros: 5\n",
       "\n",
       "Captura concluída\n"
      ]
@@ -203,15 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "704bd130",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a4c90c7e",
+   "id": "49f8710f",
    "metadata": {},
    "outputs": [],
    "source": []
